Fixed scrollbar in asset manager

--- a/media/boom-assets/css/boom.assets.css.less
+++ b/media/boom-assets/css/boom.assets.css.less
@@ -38,6 +38,10 @@
 		float: left;
 	}
 
+	&-content {
+		overflow: hidden;
+	}
+
 	&-manager {
 		.b-assets-back {
 			display: none;
